Update README with comprehensive documentation